Use correct Categories in desktop file

--- a/com.albiononline.AlbionOnline.desktop
+++ b/com.albiononline.AlbionOnline.desktop
@@ -5,4 +5,4 @@ GenericName=MMORPG
 Comment=Play Albion Online
 Icon=com.albiononline.AlbionOnline
 Exec=/app/bin/albion-online
-Categories=Game
+Categories=Game;RolePlaying;
